# Final_Project

./: README.md
cplusplus/: CMakeLists.txt
cplusplus/include/: serial.h  threaded.h
cplusplus/input/: Titin.txt  p1000a.txt  p1000b.txt  p100a.txt  p100b.txt  p1100a.txt  p1100b.txt  p1200a.txt  p1200b.txt  p2000a.txt  p2000b.txt  p200a.txt  p200b.txt  p3000a.txt  p3000b.txt  p300a.txt  p300b.txt  p4000a.txt  p4000b.txt  p400a.txt  p400b.txt  p500a.txt  p500b.txt  p6000a.txt  p6000b.txt  p600a.txt  p600b.txt  p7000a.txt  p7000b.txt  p700a.txt  p700b.txt  p8000a.txt  p8000b.txt  p800a.txt  p800b.txt  p9000a.txt  p9000b.txt  p900a.txt  p900b.txt  proteinseq1.txt  (+2 more)
cplusplus/output/: results.txt  serial_results.txt  threaded_results.txt
cplusplus/src/: randomseq.cpp  runTests.cpp  serial.cpp  serial2.cpp  threaded.cpp
python/matricies/: BLOSUM45.txt  dnaMatrix2.txt
python/sequences/: dnaseq1.txt  dnaseq2.txt  proteinseq1.txt  proteinseq2.txt  proteinseq3.txt
python/src/: align.py  dna.py  load.py  out.txt
